grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/errors/factorial_1_error.py", line 1
    Line no. 8: = missing
          ^
SyntaxError: invalid syntax
